--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
 jiter==0.9.0
+Markdown==3.8
 openai==1.70.0
 outcome==1.3.0.post0
 packaging==24.2
@@ -40,3 +42,4 @@ urllib3==2.3.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
+zipp==3.21.0
