--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 distro==1.9.0
 Django==4.2.13
 django-environ==0.12.0
+djangorestframework==3.16.0
 exceptiongroup==1.2.2
 h11==0.14.0
 httpcore==1.0.7
