--- a/planit/requirements.txt
+++ b/planit/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.4.1
 colorama==0.4.6
 distro==1.9.0
 Django==4.2.13
+django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
 exceptiongroup==1.2.2
