--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -8,7 +8,9 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 colorama==0.4.6
 distro==1.9.0
-Django==4.2.13
+dj-rest-auth==7.0.1
+Django==4.2.21
+django-allauth==65.8.1
 django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
